test/files/neg/t7507.check
t7507.scala:6: error: not found: value bippy
  locally(bippy)
          ^
one error found
